# cur_tools

./: .gitignore  .readthedocs.yaml  LICENSE  cur_tools.py  demo.py  main.py  pyCursesMenu.py  readme.md  sample.txt  setup.cfg  setup.py
db/: university.sqbpro  university.sqlite
docs/source/: __init__.py  conf.py  modules.rst
modules/: __init__.py  constant.py  cur_tools.py
modules/pyCurses/: pyCurses.py
src/cur_tools/: cur_tools.py
