[metadata]
# replace with your username:
name = cur_tools-YOUR-USERNAME-HERE
version = 0.0.1
author = Pablo Niklas
author_email = pablo.niklas@gmail.com
description = To provide DOS like interface using curses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pabloniklas/cur_tools
project_urls =
    Bug Tracker = https://github.com/pabloniklas/cur_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src